--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gitname.github.io/react-gh-pages",
+  "homepage": "http://italiaiello.github.io/trivia",
   "name": "trivia",
   "version": "0.1.0",
   "private": true,
