--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
+    "@testing-library/react-hooks": "^3.3.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -37,6 +38,10 @@
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "gh-pages": "^2.2.0"
+    "fetch-mock": "^9.10.3",
+    "gh-pages": "^2.2.0",
+    "node-fetch": "^2.6.0",
+    "react-test-renderer": "^16.13.1",
+    "whatwg-fetch": "^3.1.0"
   }
 }
